# Video-Depth-Anything

./: app.py  pyproject.toml  run.py  run_streaming.py
benchmark/infer/: infer.py
video_depth_anything/: __init__.py  video_depth.py  video_depth_stream.py
video_depth_anything/loss/: test_loss.py
